force-app/main/default/objects/Limite_DemandeCotation__mdt/Limite_DemandeCotation__mdt.object-meta.xml
<CustomObject>
    <label>Limite DemandeCotation</label>
    <pluralLabel>Limite DemandeCotations</pluralLabel>
</CustomObject>