force-app/main/default/objects/Limite_DemandeCotation__mdt/fields/canal_vente__c.field-meta.xml
<CustomField>
    <fullName>canal_vente__c</fullName>
    <label>canal vente</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Directe</fullName>
                <default>true</default>
                <label>Directe</label>
            </value>
            <value>
                <fullName>Indirecte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>