force-app/main/default/objects/Limite_DemandeCotation__mdt/fields/date_debut__c.field-meta.xml
<CustomField>
    <fullName>date_debut__c</fullName>
    <label>date debut</label>
    <required>true</required>
    <type>Date</type>
</CustomField>