force-app/main/default/objects/Limite_DemandeCotation__mdt/fields/date_fin__c.field-meta.xml
<CustomField>
    <fullName>date_fin__c</fullName>
    <label>date fin</label>
    <required>true</required>
    <type>Date</type>
</CustomField>