force-app/main/default/objects/Limite_DemandeCotation__mdt/fields/nb_dossier__c.field-meta.xml
<CustomField>
    <fullName>nb_dossier__c</fullName>
    <label>nb dossier</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>